[project]
name = "tools4msp"
version = "4.0.0-beta.1"
dependencies = [
  "Django==2.2.28",

  "matplotlib",
  "jsonfield",
  "pandas",
  "geopandas",
  "django-extensions",
  "django-filter",
  "django-import-export",
  "django-rest-swagger",
  "djangorestframework",
  "djangorestframework-gis",
  "django-cleanup",
  "django-import-export",

  "rectifiedgrid @ file:///home/frafra/Code/rectifiedgrid",

  "seaborn",
  "slugify",
  "rasterstats",
  "SALib",
  "django-treebeard",
  "django-q",
]
requires-python = ">=3.9"
authors = [
  { name = "Stefano Menegon", email = "stefano.menegon@ismar.cnr.it" },
  { name = "Francesco Frassinelli", email = "fraph24@gmail.com" },
]
description = "Tools 4 MSP"
readme = "README.md"
license = { text = "GPLv3" }
keywords = ["Maritime", "Spatial", "Planning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://data.tools4msp.eu/"
Repository = "https://github.com/CNR-ISMAR/tools4msp"
"Bug Tracker" = "https://github.com/CNR-ISMAR/tools4msp/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
